0032091: Visualization - possibility to redefine Graphic3d_TransformPers